328. Model 7: Setting up hyperparameters for the N-BEATS algorithm

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -6714,12 +6714,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m2c8X2Zgfl3q",
-        "outputId": "9599bacc-5452-46d0-dfeb-884e91703888",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "m2c8X2Zgfl3q",
+        "outputId": "9599bacc-5452-46d0-dfeb-884e91703888"
       },
       "source": [
         "# Create N-Beats data inputs (N-Beats work with univariate time series)\n",
@@ -6799,12 +6799,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ikG-UEFGf4Bk",
-        "outputId": "67007b9b-c83a-4a7a-d487-9638f3558c95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "ikG-UEFGf4Bk",
+        "outputId": "67007b9b-c83a-4a7a-d487-9638f3558c95"
       },
       "source": [
         "# Add windowed column\n",
@@ -6939,11 +6939,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jzsPT6LmgXr3",
-        "outputId": "34dc5fc9-da13-4209-ba66-58fa038cbc9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jzsPT6LmgXr3",
+        "outputId": "34dc5fc9-da13-4209-ba66-58fa038cbc9d"
       },
       "source": [
         "# Make features and labels\n",
@@ -6999,11 +6999,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sipva9CaiuQr",
-        "outputId": "497c75fb-11c2-4368-fe99-d9c7e2586e9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sipva9CaiuQr",
+        "outputId": "497c75fb-11c2-4368-fe99-d9c7e2586e9f"
       },
       "source": [
         "len(train_dataset), len(test_dataset)"
@@ -7025,16 +7025,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JmqhYVToi8E4",
-        "outputId": "488b6bb3-77cf-4a4a-f8c9-11b85c188a68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JmqhYVToi8E4",
+        "outputId": "1e1cc402-8e8c-4876-cda0-29ac5271b6eb"
       },
       "source": [
         "train_dataset, test_dataset"
       ],
-      "execution_count": 151,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7045,14 +7045,60 @@
             ]
           },
           "metadata": {},
-          "execution_count": 151
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OXj50N4rkRHh"
+      },
+      "source": [
+        "### Setting up hyperparameters for N-BEATS algorithm\n",
+        "\n",
+        "The N-Beats algorithm has a fair few numbers of parameters, many of them can be found in Table 18 : https://arxiv.org/pdf/1905.10437.pdf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dL1DLx4smZ-B",
+        "outputId": "55a99db0-f059-441c-d83c-8c7efb468afd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Values from N-BEATS paper\n",
+        "N_EPOCHS = 5000\n",
+        "N_NEURONS = 512\n",
+        "N_LAYERS  = 4\n",
+        "N_STACKS = 30\n",
+        "\n",
+        "INPUT_SIZE = WINDOW_SIZE * HORIZON\n",
+        "THETA_SIZE = INPUT_SIZE + HORIZON  # total includes forecast (Horizon) and backcast(Input_size)\n",
+        "\n",
+        "INPUT_SIZE, THETA_SIZE"
+      ],
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OXj50N4rkRHh"
+        "id": "6YWIf3PMoxwq"
       },
       "source": [
         ""
