329. Model 7: Getting ready for residual connections

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -7063,11 +7063,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dL1DLx4smZ-B",
-        "outputId": "55a99db0-f059-441c-d83c-8c7efb468afd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dL1DLx4smZ-B",
+        "outputId": "6fad7894-076d-42a9-d211-d7de2ad71067"
       },
       "source": [
         "# Values from N-BEATS paper\n",
@@ -7081,7 +7081,7 @@
         "\n",
         "INPUT_SIZE, THETA_SIZE"
       ],
-      "execution_count": 156,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7091,14 +7091,71 @@
             ]
           },
           "metadata": {},
-          "execution_count": 156
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6YWIf3PMoxwq"
+      },
+      "source": [
+        "### Getting ready for residual connection\n",
+        "\n",
+        "Before we can craft our N-BEATS model, we need two layers for the residual connection (substract and add)\n",
+        "\n",
+        "The N-Beats algorithm uses double residual stacking to help train its deeper architecture (section 3.2 of N-Beats paper)\n",
+        "\n",
+        "> **Resources** : For more on residual connection see :\n",
+        "* https://en.wikipedia.org/wiki/Residual_neural_network\n",
+        "* https://en.wikipedia.org/wiki/Vanishing_gradient_problem\n",
+        "* https://arxiv.org/abs/1512.03385\n",
+        "* https://paperswithcode.com/method/resnet"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ha8X_IHjqZKp",
+        "outputId": "99d3d1fb-6992-4a16-feab-e0937b2b9875",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make tensors\n",
+        "tensor_1 = tf.range(10) + 10\n",
+        "tensor_2  = tf.range(10)\n",
+        "\n",
+        "#Subtract\n",
+        "subtracted = layers.subtract([tensor_1, tensor_2])\n",
+        "\n",
+        "#Add\n",
+        "added  = layers.add([tensor_1, tensor_2])\n",
+        "\n",
+        "# Get outputs\n",
+        "print(f\"Input tensors : {tensor_1.numpy()} & {tensor_2.numpy()}\")\n",
+        "print(f\"Subtracted: {subtracted.numpy()}\")\n",
+        "print(f\"Added : {added.numpy()}\")"
+      ],
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Input tensors : [10 11 12 13 14 15 16 17 18 19] & [0 1 2 3 4 5 6 7 8 9]\n",
+            "Subtracted: [10 10 10 10 10 10 10 10 10 10]\n",
+            "Added : [10 12 14 16 18 20 22 24 26 28]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6YWIf3PMoxwq"
+        "id": "mQolrQhXwh2L"
       },
       "source": [
         ""
