--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -7117,11 +7117,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ha8X_IHjqZKp",
-        "outputId": "99d3d1fb-6992-4a16-feab-e0937b2b9875",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ha8X_IHjqZKp",
+        "outputId": "0cdedb83-31bb-43a9-b7a2-21695bf5b5fa"
       },
       "source": [
         "# Make tensors\n",
@@ -7139,7 +7139,7 @@
         "print(f\"Subtracted: {subtracted.numpy()}\")\n",
         "print(f\"Added : {added.numpy()}\")"
       ],
-      "execution_count": 161,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "stream",
@@ -7153,9 +7153,25 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "mQolrQhXwh2L"
+      },
+      "source": [
+        "### Building , compiling and fitting the N-BEATS algorithm\n",
+        "\n",
+        "\n",
+        "1. Setup an instance of N-Beats block layer using `NBeatsBlock` (this'll be the initial block used for the network, the rest will be created as part of stacks)\n",
+        "2. Create an input layer for the N-BEATS stack (we'll be using the Keras Functional API)\n",
+        "3. Make the initial backcast and forecasts for the model with the layer created in (1)\n",
+        "4. Use for-loops to create stacks of block layers\n",
+        "5. Use the `NBeatsBlock` class within the for loop in (4) to create blocks which return backcasts and "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mllSLPQv3Wig"
       },
       "source": [
         ""
