--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -6603,7 +6603,7 @@
         "    return backcast, forecast\n",
         "\n"
       ],
-      "execution_count": 136,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -7182,13 +7182,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "13V6qPWX9URY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "13V6qPWX9URY",
+        "outputId": "ecae2317-799c-4d26-d09b-21f88cee71cf"
       },
       "source": [
-        ""
+        "%%time\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# 1. Setup an instances of NBeatsBlock\n",
+        "nbeats_block_layer = NBeatsBlock(input_size=INPUT_SIZE, \n",
+        "                                 theta_size = THETA_SIZE,\n",
+        "                                 horizon = HORIZON,\n",
+        "                                 n_neurons = N_NEURONS,\n",
+        "                                 n_layers = N_LAYERS,                                \n",
+        "                                 name=\"InitialBlock\")\n",
+        "\n",
+        "# 2. Create input to stack\n",
+        "stack_input = layers.Input(shape=(INPUT_SIZE), name=\"stack_input\")\n",
+        "\n",
+        "# 3. Create initial backcast and forecast input(backwards prediction + horizon prediction)\n",
+        "residuals, forecast = nbeats_block_layer(stack_input)\n",
+        "\n",
+        "# 4. Create stacks of block layer\n",
+        "for i, _ in enumerate(range(N_STACKS - 1)) : # first stack is already created in (3)\n",
+        "\n",
+        "  # 5. Use the NBeatsBlock to calculate the backcast as werll as the forecast\n",
+        "  backcast, block_forecast = NBeatsBlock(\n",
+        "      input_size = INPUT_SIZE,\n",
+        "      theta_size = THETA_SIZE,\n",
+        "      horizon = HORIZON,\n",
+        "      n_neurons = N_NEURONS,\n",
+        "      n_layers = N_LAYERS,\n",
+        "      name = f\"NBeatsBlock_{i}\" \n",
+        "  )(residuals) # pass in the residuals\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello\n",
+            "CPU times: user 121 µs, sys: 6 µs, total: 127 µs\n",
+            "Wall time: 93.9 µs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
