334. Model 8: Building, compiling and fitting an ensemble of models

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10077,15 +10077,138 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GxlEj-vvDBx0"
+      },
+      "source": [
+        "## Model 8 : Creating an ensemble (stacking different models together)\n",
+        "\n",
+        "An ensemble leverages the wisdom of the crowd effect.\n",
+        "\n",
+        "It combines many different models to predict a common goal."
+      ]
+    },
+    {
       "cell_type": "code",
+      "metadata": {
+        "id": "-fNkR1AaFp6E",
+        "outputId": "a183f20e-d899-480d-c914-a78e0839dbab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "HORIZON, WINDOW_SIZE"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "35OQxpsTCJd7"
       },
       "source": [
-        ""
+        "### Constructing and fitting an ensemble of models (using different loss functions)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9JslGHyEF7RY"
+      },
+      "source": [
+        "def get_ensemble_models(horizon=HORIZON, \n",
+        "                        train_data = train_dataset,\n",
+        "                        test_data = test_dataset,\n",
+        "                        num_iter = 10,\n",
+        "                        num_epochs = 1000,\n",
+        "                        loss_fns = [\"mae\", \"mse\", \"mape\"]) :\n",
+        "  \"\"\"\n",
+        "  Returns a list of num_iter models each trained on MAE, MSE and MAPE loss.\n",
+        "\n",
+        "  For example, if num_iter = 10, a list of 30 trained models will be returned :\n",
+        "  10 * len([\"mae\", \"mse\", \"mape\"]).\n",
+        "  \"\"\"\n",
+        "  # Make empty list for trained ensemble models\n",
+        "  ensemble_models = []\n",
+        "\n",
+        "  # Create num_iter number of models per loss function\n",
+        "  for i in range(num_iter) :\n",
+        "    # Build and fit a new model with a different loss function\n",
+        "    for loss_function in loss_fns :\n",
+        "      print(f\"Optimizing model by reducing : {loss_function} for {num_epochs} epochs, model_number : {i}\")\n",
+        "\n",
+        "      # Construct a simple model (similar to model_1)\n",
+        "      model = tf.keras.Sequential([\n",
+        "        # Initialize dense layers with normal distribution for estimating prediction intervals later on\n",
+        "        layers.Dense(128, kernel_initializer = \"he_normal\", activation=\"relu\"),\n",
+        "        layers.Dense(128, kernel_initializer = \"he_normal\", activation=\"relu\"),\n",
+        "        layers.Dense(horizon)         \n",
+        "      ])\n",
+        "\n",
+        "      # Compile simple model with current loss function\n",
+        "      model.compile(loss = loss_function, \n",
+        "                    optimizer=tf.keras.optimizers.Adam(),\n",
+        "                    metrics=[\"mae\", \"mse\"])\n",
+        "      \n",
+        "      # Fit the current model\n",
+        "      model.fit(train_data, \n",
+        "                epochs = num_epochs,\n",
+        "                verbose = 0,\n",
+        "                validation_data = test_data,\n",
+        "                callbacks = [tf.keras.callbacks.EarlyStopping(monitor=\"val_loss\",\n",
+        "                                                              patience=200,\n",
+        "                                                              restore_best_weights=True),\n",
+        "                             tf.keras.callbacks.ReduceLROnPlateau(monitor=\"val_loss\",\n",
+        "                                                                  patience = 100, \n",
+        "                                                                  verbose = 1)])\n",
+        "      # Append fitted model to list of ensemble models\n",
+        "      ensemble_models.append(model)\n",
+        "      \n",
+        "  return ensemble_models  \n"
+      ],
+      "execution_count": 161,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VZVII7A8GtOs",
+        "outputId": "dc295327-4115-4927-dbeb-34f2332d5be7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%time\n",
+        "# Get list of trained ensemble models\n",
+        "\n",
+        "ensemble_models = get_ensemble_models(num_iter = 5, \n",
+        "                                      num_epochs = 1000)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
