335. Model 8: Making and evaluating predictions with our ensemble model

--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10092,11 +10092,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-fNkR1AaFp6E",
-        "outputId": "a183f20e-d899-480d-c914-a78e0839dbab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-fNkR1AaFp6E",
+        "outputId": "a183f20e-d899-480d-c914-a78e0839dbab"
       },
       "source": [
         "HORIZON, WINDOW_SIZE"
@@ -10149,7 +10149,7 @@
         "  for i in range(num_iter) :\n",
         "    # Build and fit a new model with a different loss function\n",
         "    for loss_function in loss_fns :\n",
-        "      print(f\"Optimizing model by reducing : {loss_function} for {num_epochs} epochs, model_number : {i}\")\n",
+        "      print(f\"Optimizing model by reducing : {loss_function} for {num_epochs} epochs, model number : {i}\")\n",
         "\n",
         "      # Construct a simple model (similar to model_1)\n",
         "      model = tf.keras.Sequential([\n",
@@ -10177,7 +10177,7 @@
         "                                                                  verbose = 1)])\n",
         "      # Append fitted model to list of ensemble models\n",
         "      ensemble_models.append(model)\n",
-        "      \n",
+        "\n",
         "  return ensemble_models  \n"
       ],
       "execution_count": 161,
@@ -10186,11 +10186,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VZVII7A8GtOs",
-        "outputId": "dc295327-4115-4927-dbeb-34f2332d5be7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VZVII7A8GtOs",
+        "outputId": "b510a2d8-d6ed-4dfd-a23b-1699d8e5af68"
       },
       "source": [
         "%%time\n",
@@ -10199,16 +10199,397 @@
         "ensemble_models = get_ensemble_models(num_iter = 5, \n",
         "                                      num_epochs = 1000)"
       ],
-      "execution_count": null,
+      "execution_count": 173,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Optimizing model by reducing : mae for 1000 epochs, model_number : 0\n"
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 0\n",
+            "\n",
+            "Epoch 00211: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "Optimizing model by reducing : mse for 1000 epochs, model_number : 0\n",
+            "\n",
+            "Epoch 00513: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00613: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mape for 1000 epochs, model_number : 0\n",
+            "\n",
+            "Epoch 00251: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00585: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "\n",
+            "Epoch 00685: ReduceLROnPlateau reducing learning rate to 1.0000000656873453e-06.\n",
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 1\n",
+            "\n",
+            "Epoch 00217: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00379: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "\n",
+            "Epoch 00479: ReduceLROnPlateau reducing learning rate to 1.0000000656873453e-06.\n",
+            "Optimizing model by reducing : mse for 1000 epochs, model_number : 1\n",
+            "\n",
+            "Epoch 00259: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00359: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mape for 1000 epochs, model_number : 1\n",
+            "\n",
+            "Epoch 00341: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00806: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "\n",
+            "Epoch 00906: ReduceLROnPlateau reducing learning rate to 1.0000000656873453e-06.\n",
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 2\n",
+            "\n",
+            "Epoch 00855: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "Optimizing model by reducing : mse for 1000 epochs, model_number : 2\n",
+            "\n",
+            "Epoch 00837: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00937: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mape for 1000 epochs, model_number : 2\n",
+            "\n",
+            "Epoch 00203: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 3\n",
+            "\n",
+            "Epoch 00788: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "Optimizing model by reducing : mse for 1000 epochs, model_number : 3\n",
+            "\n",
+            "Epoch 00399: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00499: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mape for 1000 epochs, model_number : 3\n",
+            "\n",
+            "Epoch 00661: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00761: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mae for 1000 epochs, model_number : 4\n",
+            "\n",
+            "Epoch 00511: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00611: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mse for 1000 epochs, model_number : 4\n",
+            "\n",
+            "Epoch 00736: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00836: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "Optimizing model by reducing : mape for 1000 epochs, model_number : 4\n",
+            "\n",
+            "Epoch 00233: ReduceLROnPlateau reducing learning rate to 0.00010000000474974513.\n",
+            "\n",
+            "Epoch 00333: ReduceLROnPlateau reducing learning rate to 1.0000000474974514e-05.\n",
+            "CPU times: user 4min 49s, sys: 23.2 s, total: 5min 12s\n",
+            "Wall time: 4min 34s\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jOcFPyCoMT02",
+        "outputId": "742f1ad4-b17d-4af9-dfc7-9d8f0958450a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(ensemble_models)"
+      ],
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h06NHJqCMhCX",
+        "outputId": "ad05fbe7-5452-403e-f765-46467674d22a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "ensemble_models"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<keras.engine.sequential.Sequential at 0x7f0b552f8690>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b5516bfd0>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b550aafd0>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b54f01b90>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b45d64f50>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b45caa050>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b452f8050>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b4519c6d0>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b45077c50>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b44e8f590>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b3f50a790>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b3ebb61d0>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b3ea54110>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b3e882190>,\n",
+              " <keras.engine.sequential.Sequential at 0x7f0b3e77da90>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 175
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U0PZzDl3MvXV"
+      },
+      "source": [
+        "### Make predictions with our ensemble models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VdSbX5EPNUzI"
+      },
+      "source": [
+        "# Create a function which uses a list of trained models to make and return a list of predictions\n",
+        "def make_ensemble_preds(ensemble_models, data) :\n",
+        "  ensemble_preds = []\n",
+        "  for model in ensemble_models :\n",
+        "    preds = model.predict(data)\n",
+        "    ensemble_preds.append(preds)\n",
+        "\n",
+        "  return tf.constant(tf.squeeze(ensemble_preds))"
+      ],
+      "execution_count": 178,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "46Fb4_61NuDp",
+        "outputId": "f32a984d-03a8-4782-f4e9-b20ba9f8a24c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a list of ensemble predictions\n",
+        "\n",
+        "ensemble_preds = make_ensemble_preds(ensemble_models = ensemble_models,\n",
+        "                                     data = test_dataset)\n",
+        "ensemble_preds"
+      ],
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(15, 556), dtype=float32, numpy=\n",
+              "array([[ 8829.275,  8730.214,  9034.569, ..., 50138.168, 48557.8  ,\n",
+              "        46575.457],\n",
+              "       [ 8735.994,  8727.027,  8995.137, ..., 49717.94 , 48502.656,\n",
+              "        46711.73 ],\n",
+              "       [ 8797.052,  8786.647,  9078.54 , ..., 49394.95 , 48162.965,\n",
+              "        46449.54 ],\n",
+              "       ...,\n",
+              "       [ 8812.532,  8813.778,  9056.779, ..., 49748.64 , 48549.797,\n",
+              "        45612.36 ],\n",
+              "       [ 8800.897,  8800.536,  9017.055, ..., 50009.402, 48004.75 ,\n",
+              "        46964.953],\n",
+              "       [ 8784.204,  8734.816,  9053.78 , ..., 49946.254, 48730.633,\n",
+              "        45970.887]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 182
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M7gOrWbkUSsO"
+      },
+      "source": [
+        "Our ensemble preds come out in multiple dimensions but to combine into **point predictions** we can leverage the mean of all of the predictions or the median \n",
+        "https://machinelearningmastery.com/combine-predictions-for-ensemble-learning/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NeUWwi4PQNqe",
+        "outputId": "cbb5cbc4-631f-4f21-c728-3c02d4bb4900",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "ensemble_mean = tf.reduce_mean(ensemble_preds, axis = 0) # mean on 1st column, so 556 predictions, if we mean on axis=1, it would return only 15 \n",
+        "len(ensemble_mean)"
+      ],
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "556"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jj7LLjokQ62T",
+        "outputId": "140ae787-171c-4fdc-aac6-660806f15da1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "ensemble_median = np.median(ensemble_preds, axis  =0 )\n",
+        "len(ensemble_median)"
+      ],
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "556"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 187
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SAbiGYatPBvz",
+        "outputId": "6f5f5d45-a703-4516-c146-e18237138672",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate ensemble model predictions on mean\n",
+        "ensemble_results = evaluate_preds(y_true = y_test,\n",
+        "                                  y_pred = ensemble_mean)\n",
+        "ensemble_results"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'mae': 564.26666,\n",
+              " 'mape': 2.5618267,\n",
+              " 'mase': 0.99126023,\n",
+              " 'mse': 1141356.8,\n",
+              " 'rmse': 1068.343}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lW09rbCYQMU8",
+        "outputId": "4ce5eea6-bd9d-410a-c200-83de59843ad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate ensemble model predictions on median\n",
+        "ensemble_results = evaluate_preds(y_true = y_test,\n",
+        "                                  y_pred = ensemble_median)\n",
+        "ensemble_results"
+      ],
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'mae': 564.5298,\n",
+              " 'mape': 2.5661907,\n",
+              " 'mase': 0.99172246,\n",
+              " 'mse': 1142447.0,\n",
+              " 'rmse': 1068.8531}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 189
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y6iviXefP8Md",
+        "outputId": "81370984-b118-4db2-ffa7-4af63e68d0a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "naive_results"
+      ],
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'mae': 567.9802,\n",
+              " 'mape': 2.516525,\n",
+              " 'mase': 0.99957,\n",
+              " 'mse': 1147547.0,\n",
+              " 'rmse': 1071.2362}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5XCpA0dQTg9q"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
