--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10147,12 +10147,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y6iviXefP8Md",
-        "outputId": "1f1cbb2c-fa7a-4a3c-8405-5c1d60bc4542"
+        "outputId": "4e10b40d-8d97-43ae-acaa-e6bcda2e04f7"
       },
       "source": [
         "naive_results"
       ],
-      "execution_count": 86,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10166,7 +10166,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 87
         }
       ]
     },
@@ -10203,7 +10203,12 @@
         "id": "4tdM-wUhm6wg"
       },
       "source": [
-        ""
+        "# Find upper and lower bounds of ensemble predictions\n",
+        "\n",
+        "def get_upper_lower(preds) : # 1. Take the predictions from a number of randomly intialized models\n",
+        "\n",
+        "  # 2. Measure the standard deviation of the predictions\n",
+        "  std = tf.math.reduce_std(preds, axis=0)"
       ],
       "execution_count": null,
       "outputs": []
