--- a/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
+++ b/10_time_series_forecasting_with_tensorflow_milestone_proj3_bitpredict.ipynb
@@ -10295,9 +10295,28 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "jnO-rZYE-fCw"
+      },
+      "source": [
+        "## Aside: two types of uncertainty (coconut and subway)\n",
+        "\n",
+        "Uncertainty estimates in ML seek out to qualitatively and quantitatively answer the questions :\n",
+        "\n",
+        "1. What can you my model know? (with perfect data, what's possible for a model to learn ?)\n",
+        "\n",
+        "2. What doesn't my model know ? (what can a model never predict? Or would it helpful if a model could tell you that when it's making a prediction, it doesn't actually know if it's right or not?)\n",
+        "\n",
+        "\n",
+        "There are 2 major types of uncertainty in ML you should know about :\n",
+        "* Aleatoric uncertainty : "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yl6D_r10_wtk"
       },
       "source": [
         ""
